--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Name | Freelance Designer & Content Creator</title>
+  <title>Emma Kiel-CHisholm | Freelance Graphic Designer & Content Creator</title>
   <style>
     :root {
       --bg: #f9f9f9;
@@ -107,8 +107,8 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
-    <p>Freelance Designer & Content Creator</p>
+    <h1>Emma Kiel-Chisholm</h1>
+    <p>Freelance Graphic Designer & Content Creator</p>
   </header>
 
   <section>
@@ -123,8 +123,8 @@
     <div class="portfolio-grid">
       <div class="portfolio-item">
         <img src="https://via.placeholder.com/400x250?text=Project+1" alt="Project 1">
-        <h3>Project Title 1</h3>
-        <p>A short description of what this project is and what you did.</p>
+        <h3>CEO Farewell Book</h3>
+        <p>A thoughtfull farewell gift from a comapny to it's CEO thanking him for his tenure.</p>
       </div>
       <div class="portfolio-item">
         <img src="https://via.placeholder.com/400x250?text=Project+2" alt="Project 2">
