--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Emma Kiel-CHisholm | Freelance Graphic Designer & Content Creator</title>
+  <title>ekcDESIGNS | Freelance Graphic Designer & Content Creator</title>
   <style>
     :root {
       --bg: #f9f9f9;
@@ -150,7 +150,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Your Name. All rights reserved.
+    &copy; 2025 ekcDESIGNS. All rights reserved.
   </footer>
 </body>
 </html>
